--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
                     </div>
 
                     <!-- Language Selector -->
-                    <div class="container text-end">
-                        <select class="form-select" id="language-select">
-                        <option value="en">English</option>
-                        <option value="es">Español</option>
-                        <option value="fr">Français</option>
-                        <!-- Add more languages here -->
+                    <div class="col-6 col-lg-3 text-right">
+                        <select class="form-select small mr-3"" id=" language-select">
+                            <option value="en">English</option>
+                            <option value="es">Español</option>
+                            <option value="fr">Français</option>
+                            <!-- Add more languages here -->
                         </select>
                     </div>
 
@@ -66,7 +66,6 @@
                             Register
                         </a>
                     </div>
-
 
                 </div>
             </div>
@@ -158,7 +157,7 @@
                     <h1 class="display-4 fw-bold">Empowering Dreams. Building Global Futures.</h1>
                     <p class="lead mb-4">We connect Malawian students with top international universities through expert
                         guidance and personalized support.</p>
-                    <a href="#contact" class="btn btn-primary me-3">Apply Now</a>
+                    <a href="#contact" id="openFormBtn"  class="btn btn-primary me-3">Apply Now</a>
                     <button type="button" class="btn btn-outline-light" data-bs-toggle="modal"
                         data-bs-target="#videoModal">
                         ▶ Watch Video
@@ -173,7 +172,7 @@
                     <h1 class="display-5 fw-bold">Scholarships & Visa Support</h1>
                     <p class="lead mb-4">From choosing the right program to securing funding, Mtendere Education Consult
                         is with you every step of the way.</p>
-                    <a href="#services" class="btn btn-success">Explore Services</a>
+                    <a href="#services" id="openFormBtn" class="btn btn-primary me-3">Explore Services</a>
                 </div>
             </div>
 
@@ -359,7 +358,7 @@
                         <li>🚀 Empowering communities</li>
                     </ul>
 
-                    <p data-aos="fade-up" data-aos-delay="300"><a href="#" class="btn btn-primary">Get Started</a></p>
+                    <p data-aos="fade-up" id="openFormBtn" data-aos-delay="300"><a href="#" class="btn btn-primary">Get Started</a></p>
 
                 </div>
                 <div class="col-lg-6" data-aos="fade-up" data-aos-delay="0">
@@ -696,76 +695,84 @@
         </div>
     </div> <!-- /.untree_co-section -->
 
-    <div id="popupFormContainer">
-        <div id="popupForm">
-            <span id="closeBtn" onclick="closeForm()">&times;</span>
+    <div id="formModal">
+        <div class="modal-content">
+            <span id="closeFormBtn">&times;</span>
+            <h1>Apply to Partner Universities</h1>
+
             <form id="applicationForm">
-                <div class="section">
-                    <label for="university">Select University</label>
-                    <select id="university" name="university" required>
-                        <option value="">-- Choose a University --</option>
-                        <option value="chandigarh">Chandigarh University</option>
-                        <option value="parul">Parul University</option>
-                        <option value="ct">CT University</option>
-                        <option value="shoolini">Shoolini University</option>
-                        <option value="jain">Jain University</option>
-                    </select>
-                </div>
+                <label for="university">Select University</label>
+                <select id="university" name="university" required>
+                    <option value="">-- Choose a University --</option>
+                    <option value="chandigarh">Chandigarh University</option>
+                    <option value="parul">Parul University</option>
+                    <option value="ct">CT University</option>
+                    <option value="shoolini">Shoolini University</option>
+                    <option value="jain">Jain University</option>
+                </select>
 
-                <div class="section">
-                    <label for="intakeMonth">Available Intake Months</label>
-                    <select id="intakeMonth" name="intakeMonth" required></select>
-                </div>
+                <label for="intakeMonth">Available Intake Months</label>
+                <select id="intakeMonth" name="intakeMonth" required></select>
 
-                <div class="section">
-                    <label for="program">Available Programs</label>
-                    <select id="program" name="program" required></select>
-                </div>
+                <label for="program">Available Programs</label>
+                <select id="program" name="program" required></select>
 
-                <div class="section">
-                    <label for="documents">Required Documents</label>
-                    <textarea id="documents" name="documents" readonly></textarea>
-                </div>
+                <label for="documents">Required Documents</label>
+                <textarea id="documents" name="documents" readonly></textarea>
 
-                <div class="section">
-                    <label for="requirements">University Entry Requirements</label>
-                    <textarea id="requirements" name="requirements" readonly></textarea>
-                </div>
+                <label for="fullname">Full Name</label>
+                <input type="text" name="fullname" required>
 
-                <div class="section">
-                    <label for="fullname">Full Name</label>
-                    <input type="text" name="fullname" required>
-                </div>
+                <label for="email">Email Address</label>
+                <input type="email" name="email" required>
 
-                <div class="section">
-                    <label for="email">Email Address</label>
-                    <input type="email" name="email" required>
-                </div>
+                <label for="passport">Passport Number</label>
+                <input type="text" name="passport" required>
 
-                <div class="section">
-                    <label for="passport">Passport Number</label>
-                    <input type="text" name="passport" required>
-                </div>
+                <label for="passportExpiry">Passport Expiry Date</label>
+                <input type="date" name="passportExpiry" required>
 
-                <div class="section">
-                    <label for="academic">Latest Academic Qualification</label>
-                    <input type="text" name="academic" placeholder="e.g. MSCE, IGCSE, A-Levels" required>
-                </div>
+                <label for="dob">Date of Birth</label>
+                <input type="date" name="dob" required>
 
-                <div class="section file-input">
+                <label for="academic">Latest Academic Qualification</label>
+                <input type="text" name="academic" placeholder="e.g. MSCE, IGCSE, A-Levels" required>
+
+                <div class="file-input">
                     <label for="cv">Upload CV (PDF, DOCX only)</label>
                     <input type="file" id="cv" name="cv" accept=".pdf, .docx" required>
                 </div>
 
-                <div class="section file-input">
+                <div class="file-input">
                     <label for="academicTranscripts">Upload Academic Transcript (PDF, JPG, PNG only)</label>
                     <input type="file" id="academicTranscripts" name="academicTranscripts" accept=".pdf, .jpg, .png"
                         required>
                 </div>
 
-                <div class="section">
-                    <button type="submit">Submit Application</button>
-                </div>
+                <label for="motivation">Why are you choosing this program?</label>
+                <textarea name="motivation" rows="3" required></textarea>
+
+                <label for="learningStyle">Preferred Learning Style</label>
+                <select name="learningStyle" required>
+                    <option value="">-- Select Style --</option>
+                    <option>Visual</option>
+                    <option>Auditory</option>
+                    <option>Kinesthetic</option>
+                </select>
+
+                <label for="intelligence">Quick Logic Challenge: What comes next? 2, 4, 8, 16, ___</label>
+                <input type="text" name="intelligence" required placeholder="Your answer here">
+
+                <label for="personality">Personality Traits</label>
+                <select name="personality" required>
+                    <option value="">-- Select One --</option>
+                    <option>Focused</option>
+                    <option>Creative</option>
+                    <option>Analytical</option>
+                    <option>Team Player</option>
+                </select>
+
+                <button type="submit">Submit Application</button>
             </form>
         </div>
     </div>
@@ -946,9 +953,6 @@
             </div>
         </div>
     </div> <!-- /.untree_co-section -->
-
-
-
     <div class="untree_co-section bg-light">
         <div class="container">
             <div class="row">
@@ -1105,18 +1109,6 @@
             </div>
         </div>
     </div> <!-- /.untree_co-section -->
-
-    <!-- Scholarships & Financial Aid Section -->
-    <div class="container my-5">
-        <h4>Scholarships & Financial Aid</h4>
-        <p>Explore various scholarships and financial aid opportunities for students. Apply now to secure your future.
-        </p>
-        <ul class="list-unstyled">
-            <li><a href="scholarship-details.html" class="text-primary">International Scholarship Program</a></li>
-            <li><a href="financial-aid.html" class="text-primary">Financial Aid for Undergraduates</a></li>
-            <li><a href="study-abroad-loans.html" class="text-primary">Study Abroad Loan Assistance</a></li>
-        </ul>
-    </div>
 
     <!-- Footer Start -->
     <div class="container-fluid position-relative overlay-top bg-dark text-white-50 py-5" style="margin-top: 90px;">
