--- a/blog-details.html
+++ b/blog-details.html
@@ -137,53 +137,46 @@
         </div>
     </nav>
 
-    <!-- Header Start -->
-    <div class="hero overlay jumbotron jumbotron-fluid page-header position-relative overlay-bottom"
-        style="background-image: url('images/img-school-3-min.jpg');">
-        <div class="container">
-            <div class="row align-items-center justify-content-center">
-                <div class="container text-center py-5">
-                    <h1 class="text-white display-1">Courses</h1>
-                    <div class="d-inline-flex text-white mb-5">
-                        <p class="m-0 text-uppercase"><a class="text-white" href="">Home</a></p>
-                        <i class="fa fa-angle-double-right pt-1 px-3"></i>
-                        <p class="m-0 text-uppercase">Courses</p>
-                    </div>
+    <!<!-- Header Start -->
+    <div class="jumbotron jumbotron-fluid page-header position-relative overlay-bottom" style="margin-bottom: 90px;"> 
+        <div class="hero overlay" style="background-image: url('images/img-school-3-min.jpg');">
+            <div class="container text-center py-5">
+                <h1 class="text-white display-1">Contact Us</h1>
+                <div class="d-inline-flex text-white mb-5">
+                    <p class="m-0 text-uppercase"><a class="text-white" href="index.html">Home |</a></p>
+                    <i class="fa fa-angle-double-right pt-1 px-3"></i>
+                    <p class="m-0 text-uppercase"><a class="text-white" href="blog.html">blogs |</a></p>
+                    <i class="fa fa-angle-double-right pt-1 px-3"></i>
+                    <p class="m-0 text-uppercase">more</p>
                 </div>
-                <div class="mx-auto mb-5" style="width: 100%; max-width: 600px;">
-                    <div class="input-group">
-                        <select id="courseType" class="btn btn-outline-light bg-white text-body px-4">
-                            <option value="All">All</option>
-                            <option value="Undergraduate Degree">Undergraduate Degree</option>
-                            <option value="Post-graduate Degree">Post-graduate Degree</option>
-                            <option value="Masters Degree">Masters Degree</option>
-                            <option value="Doctoral Degree">Doctoral Degree</option>
-                            <option value="PhD Degree">PhD Degree</option>
-                        </select>
-                        <input type="text" id="keyword" class="form-control border-light" placeholder="Keyword"
-                            style="padding: 30px 25px;">
-                        <div class="input-group-append">
-                            <button class="btn btn-secondary px-4 px-lg-5" onclick="searchCourses()">Search</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Results -->
-            <div class="row justify-content-center" id="searchResults">
-                <!-- Results Display -->
-                <section id="search-results" class="py-5 bg-light">
-                    <div class="container">
-                        <h2 class="text-center mb-4">Matching Programs</h2>
-                        <div id="resultsContainer" class="row justify-content-center">
-                            <!-- Results will appear here -->
-
-                        </div>
-                    </div>
-                </section>
             </div>
         </div>
     </div>
+    
+    <div class="container">
+        <div class="row align-items-center justify-content-center">
+            <div class="mx-auto mb-5" style="width: 100%; max-width: 600px;">
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <button class="btn btn-outline-light bg-white text-body px-4 dropdown-toggle" type="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Courses</button>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Undergraduate Degree</a>
+                            <a class="dropdown-item" href="#">Post-graduate Degree</a>
+                            <a class="dropdown-item" href="#">Masters Degree</a>
+                            <a class="dropdown-item" href="#">Doctoral Degree</a>
+                            <a class="dropdown-item" href="#">PhD Degree</a>
+                        </div>
+                    </div>
+                    <input type="text" class="form-control border-light" style="padding: 30px 25px;"
+                        placeholder="Keyword">
+                    <div class="input-group-append">
+                        <button class="btn btn-secondary px-4 px-lg-5">Search</button>
+                    </div>
+                </div>
+            </div>
+        </div> <!-- /.row -->
+    </div> <!-- /.container -->
     <!-- Header End -->
 
     </div> <!-- /.untree_co-hero -->
